<resources>
    <string name="app_name">Hanium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote_fragment">Quote Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="board_fragment">Board Fragment</string>
    <string name="user_fragment">User Fragment</string>
    <string name="user_name">수산 병아리님</string>
    <string name="name">이름</string>
    <string name="percentage_30">30%</string>
    <string name="current_money">현재 보유 중인 재화</string>
    <string name="_4_500">4,500원</string>
    <string name="_2">2개</string>
    <string name="money_description">보유 중인 돈</string>
    <string name="coupon_description">보유 중인 쿠폰</string>
    <string name="susan_susan">수산수산</string>
    <string name="contact">연락처</string>
    <string name="email">이메일</string>
    <string name="birth">생년월일</string>
    <string name="save">저장하기</string>
    <string name="logout">로그아웃</string>
    <string name="susan_nl_susan">수산\n수산</string>
    <string name="easier_susan_info">더욱 쉬운 수산 시장 정보</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="enter_to_message">메세지를 입력해 주세요</string>
    <string name="chat_to_chatbot">챗 봇과 대화</string>
    <string name="check_duplicate">중복확인</string>
    <string name="password_check">패스워드 확인</string>
</resources>