<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_fish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gugi_regular"
        android:text="@string/susan_nl_susan"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/primary_color"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/primary_color"
        android:ems="10"
        android:hint="@string/name"
        android:backgroundTint="@color/primary_color"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />


    <EditText
        android:id="@+id/et_pass"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_color"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:textColorHint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_passck"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_color"
        android:ems="10"
        android:hint="@string/password_check"
        android:inputType="textPersonName|textPassword"
        android:textColorHint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/et_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button_round_7"
        android:textColor="@color/white"
        android:text="@string/register"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/et_passck"
        app:layout_constraintTop_toBottomOf="@+id/et_passck"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/btnValidate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_button_round_7"
        android:elevation="0dp"
        android:text="@string/check_duplicate"
        app:layout_constraintBottom_toBottomOf="@+id/et_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_id" />

</androidx.constraintlayout.widget.ConstraintLayout>