<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:background="@drawable/shape_view_bottom_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/susan_nl_susan"
        android:textColor="#A3E3FF"
        android:fontFamily="@font/gugi_regular"
        android:textSize="35sp"
        android:shadowColor="#6a6a6a"
        android:shadowDx="2"
        android:shadowDy="12"
        android:shadowRadius="5"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easier_susan_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="#6a6a6a"
        android:shadowDx="2"
        android:shadowDy="8"
        android:shadowRadius="5"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="34dp"
        android:layout_marginBottom="-20dp"
        android:layout_marginTop="23dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_sub_title" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFBFB">

            <TextView
                android:id="@+id/tv_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                app:layout_constraintBottom_toTopOf="@id/et_id"
                app:layout_constraintStart_toStartOf="@id/et_id" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:layout_marginHorizontal="29dp"
                android:backgroundTint="@color/primary_color"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                app:layout_constraintBottom_toTopOf="@id/et_pw"
                app:layout_constraintStart_toStartOf="@id/et_pw" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/primary_color"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_id" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/light_sky"
                android:layout_marginTop="33dp"
                app:layout_constraintEnd_toEndOf="@id/et_pw"
                app:layout_constraintStart_toStartOf="@id/et_pw"
                app:layout_constraintTop_toBottomOf="@id/et_pw" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/light_sky"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/et_pw"
                app:layout_constraintStart_toStartOf="@id/et_pw"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>